[package]
name = "r503"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

pio = "0.2.1"
smart-leds = "0.3.0"

heapless = "0.8.0"

# They haven't released the `embassy_time::with_deadline` yet, so need to use the GIT version.
[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["defmt"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]

[dependencies.embassy-time-driver]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]

[profile.release]
debug = 2
