[package]
name = "r503"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
critical-section = "1.2.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

portable-atomic = { version = "1.10.0", features = ["critical-section"] }

pio = "0.2.1"
smart-leds = "0.3.0"

heapless = "0.8.0"

[dependencies.embassy-embedded-hal]
features = ["defmt"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "9edf5b7"

[dependencies.embassy-executor]
features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "9edf5b7"

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "9edf5b7"

[dependencies.embassy-rp]
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "9edf5b7"

[profile.release]
debug = 2
